--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,123 +1,19 @@
-.container {
-  padding: 3em;
-  max-width: 1000px;
-  margin: 0 auto;
-}
 
-h1 {
-  text-align: center;
-}
 
-.card-container {
+.body {
+  background-color: rgba(17, 24, 39, 1);
   display: flex;
-  width: 100%;
-  padding-top: 5em;
+  flex-direction: column;
+  font-family: Roboto, sans-serif;
+  justify-content: center;
+  padding: 61px 0;
 }
 
+@media (max-width: 991px) {
+  .body {
+    max-width: 100%;
+  }
+} 
 
 
 
-/* .container {
-    padding: 3em;
-    max-width: 1000px;
-    margin: 0 auto;
-  }
-  h1 {
-    text-align: center;
-  }
-  
-  .card-container {
-    display: flex;
-    width: 100%;
-    padding-top: 5em;
-  }
-  
-  .cards-form {
-    width: 50%;
-    padding: 2em;
-  }
-  .form-group {
-    margin-bottom: 1em;
-  }
-  .form-group label {
-    display: block;
-    margin-bottom: 0.5em;
-    font-weight: bold;
-  }
-  
-  .form-group input[type="text"],
-  .form-group input[type="password"],
-  .form-group input[type="number"] {
-    width: 100%;
-    padding: 0.5em 0.3em;
-    margin: 0.5em;
-    font-size: 1.2em;
-    border-radius: 2px;
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
-    -ms-border-radius: 2px;
-    -o-border-radius: 2px;
-  }
-  
-  .form-group-inline {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    justify-content: space-between;
-  }
-  
-  .form-group-inline div {
-    width: 30%;
-  }
-  
-  .form-group button {
-    background-color: black;
-    padding: 0.5em 1em;
-    color: wheat;
-    border: none;
-    outline: none;
-    border-radius: 2px;
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
-    -ms-border-radius: 2px;
-  -o-border-radius: 2px;
-  }
-  
-  .card-grid {
-    width: 50%;
-    padding: 2em;
-  }
-  
-  .card-row {
-    width: 100%;
-    display: flex;
-    margin-bottom: 0.2em;
-  }
-  
-  .card-row-details {
-    background-color: #eee;
-    flex-grow: 1;
-    padding: 0.4em 1em;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0.2em;
-    cursor: pointer;
-  }
-  
-  .card-row-action {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .card-row-action a {
-    display: block;
-    cursor: pointer;
-    padding: 1em;
-    background-color: #ef5350;
-    color: white;
-  }
-  
-  
-   */
