--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,77 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  background-color: rgba(17, 24, 39, 1);
+  font-family: Roboto, sans-serif;
+  margin: 0; /* Ensure no default margin */
+  padding: 0; /* Ensure no default padding */
+}
+
+
+.app-book-list .table {
+  display: flex; /* Change display property to flex */
+  flex-direction: column; /* Add flex-direction property */
+  border-radius: 8px;
+  background-color: rgba(31, 41, 55, 1);
+  box-shadow: 0px 4px 6px -4px rgba(0, 0, 0, 0.1);
+  margin-top: 24px;
+  width: 100%;
+  padding-bottom: 17px;
+  overflow: hidden;
+}
+
+@media (max-width: 991px) {
+  .app-book-list .table {
+    max-width: 100%;
+  }
+}
+
+.app-book-list .thead {
+  color: rgba(156, 163, 175, 1);
+  text-transform: uppercase;
+  background-color: rgba(55, 65, 81, 1);
+  font: 600 12px/1 Roboto, sans-serif;
+}
+
+.app-book-list .th {
+  text-align: left;
+  white-space: nowrap;
+  padding: 20px 24px;
+}
+
+.app-book-list .th-2, .app-book-list .th-3, .app-book-list .th-4, .app-book-list .th-5, .app-book-list .th-6 {
+  text-align: left;
+  padding: 20px 24px;
+}
+
+@media (max-width: 991px) {
+  .app-book-list .th-2, .app-book-list .th-3, .app-book-list .th-5, .app-book-list .th-6 {
+    white-space: initial;
+    padding: 0 20px;
+  }
+  
+  .app-book-list .th-4 {
+    padding: 0 20px;
+  }
+}
+
+.app-book-list .tbody {
+  color: rgba(255, 255, 255, 1);
+  font: 400 16px Roboto, sans-serif;
+}
+
+.app-book-list .tr {
+  border-bottom: 1px solid rgba(55, 65, 81, 1);
+}
+
+.app-book-list .td {
+  padding: 10px;
+}
+
+.app-book-list .td-2 {
+  padding: 10px;
+  color: rgba(34, 197, 94, 1);
+}
+
+.app-book-list .td-3 {
+  padding: 10px;
+  color: rgba(239, 68, 68, 1);
+}
