--- a/docs/browser/styles-ZLX73WVU.css
+++ b/docs/browser/styles-ZLX73WVU.css
@@ -1,1 +1,76 @@
-body{background-color:#111827;font-family:Roboto,sans-serif;margin:0;padding:0;box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}.app-book-list .table{border-radius:8px;background-color:#1f2937;box-shadow:0 4px 6px -4px #0000001a;margin-top:24px;width:100%;padding-bottom:17px;overflow:hidden;border-collapse:collapse}@media (max-width: 991px){.app-book-list .table{max-width:100%}}.app-book-list .thead{color:#9ca3af;text-transform:uppercase;background-color:#374151;font:600 12px/1 Roboto,sans-serif}.app-book-list .th{text-align:left;white-space:nowrap;padding:20px 24px}.app-book-list .th-2,.app-book-list .th-3,.app-book-list .th-4,.app-book-list .th-5,.app-book-list .th-6{text-align:left;padding:20px 24px}@media (max-width: 991px){.app-book-list .th-2,.app-book-list .th-3,.app-book-list .th-5,.app-book-list .th-6{white-space:initial;padding:0 20px}.app-book-list .th-4{padding:0 20px}}.app-book-list .tbody{color:#fff;font:400 16px Roboto,sans-serif}.app-book-list .tr{border-bottom:1px solid rgba(55,65,81,1)}.app-book-list .td{padding:10px}.app-book-list .td-2{padding:10px;color:#22c55e}.app-book-list .td-3{padding:10px;color:#ef4444}
+body {
+  background-color: #111827;
+  font-family: Roboto, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+.app-book-list .table {
+  border-radius: 8px;
+  background-color: #1f2937;
+  box-shadow: 0 4px 6px -4px #0000001a;
+  margin-top: 24px;
+  width: 100%;
+  padding-bottom: 17px;
+  overflow: hidden;
+  border-collapse: collapse;
+}
+@media (max-width: 991px) {
+  .app-book-list .table {
+    max-width: 100%;
+  }
+}
+.app-book-list .thead {
+  color: #9ca3af;
+  text-transform: uppercase;
+  background-color: #374151;
+  font: 600 12px/1 Roboto, sans-serif;
+}
+.app-book-list .th {
+  text-align: left;
+  white-space: nowrap;
+  padding: 20px 24px;
+}
+.app-book-list .th-2,
+.app-book-list .th-3,
+.app-book-list .th-4,
+.app-book-list .th-5,
+.app-book-list .th-6 {
+  text-align: left;
+  padding: 20px 24px;
+}
+@media (max-width: 991px) {
+  .app-book-list .th-2,
+  .app-book-list .th-3,
+  .app-book-list .th-5,
+  .app-book-list .th-6 {
+    white-space: initial;
+    padding: 0 20px;
+  }
+  .app-book-list .th-4 {
+    padding: 0 20px;
+  }
+}
+.app-book-list .tbody {
+  color: #fff;
+  font: 400 16px Roboto, sans-serif;
+}
+.app-book-list .tr {
+  border-bottom: 1px solid rgba(55, 65, 81, 1);
+}
+.app-book-list .td {
+  padding: 10px;
+}
+.app-book-list .td-2 {
+  padding: 10px;
+  color: #22c55e;
+}
+.app-book-list .td-3 {
+  padding: 10px;
+  color: #ef4444;
+}
