--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,16 @@
 <!--app.component.html-->
-<app-library></app-library>
 
 
 
 
+<nav>
+  <ul>
+    <li><a routerLink="/landing-page">Landing Page</a></li>
+    <li><a routerLink="/builder-page">Builder Page</a></li>
+    <li><a routerLink="/Library">Library</a></li>
+  </ul>
+</nav>
+  <router-outlet></router-outlet>
 <!-- book-list.component.html -->
 <!-- <h1>View All Books</h1>
 <p>
