--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,11 @@
+
+header{
+  background-color: rgba(17, 24, 39, 1);
+  font-family: Roboto, sans-serif;
+  margin: 0; /* Ensure no default margin */
+  padding: 0; /* Ensure no default padding */
+  box-sizing: border-box; /* Ensure padding is included in the width */
+}
 body {
   background-color: rgba(17, 24, 39, 1);
   font-family: Roboto, sans-serif;
