Börjar komma någon vart, lagt till mto-models, lagt till stand-alone component för add book (fixar css atm)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,18 @@
 <!--app.component.html-->
 
 
-
+<header>
+  <app-header></app-header>
+</header>
+<div class="body">
+  <router-outlet></router-outlet>
+  <footer></footer>
 
 <nav>
   <ul>
     <li><a routerLink="/landing-page">Landing Page</a></li>
     <li><a routerLink="/builder-page">Builder Page</a></li>
-    <li><a routerLink="/Library">Library</a></li>
+    <li><a routerLink="/library">Library</a></li>
   </ul>
 </nav>
   <router-outlet></router-outlet>
