--- a/src/app/components/BookFormComponent/bookForm.component.html
+++ b/src/app/components/BookFormComponent/bookForm.component.html
@@ -4,11 +4,11 @@
   <h2>{{ editBook ? 'Edit Book' : 'Add Book' }}</h2>
   <form (ngSubmit)="submitForm()">
     <div class="form-group">
-      <label>Title</label>
+      <label>Titel</label>
       <input [(ngModel)]="book.title" name="title" placeholder="Title" required />
     </div>
     <div class="form-group">
-      <label>Author</label>
+      <label>Författare</label>
       <input [(ngModel)]="book.author" name="author" placeholder="Author" required />
     </div>
     <div class="form-group">
@@ -16,16 +16,12 @@
       <input [(ngModel)]="book.genre" name="genre" placeholder="Genre" required />
     </div>
     <div class="form-group">
-      <label>Book Description</label>
+      <label>Beskrivning</label>
       <input [(ngModel)]="book.bookDescription" name="bookDescription" placeholder="bookDescription" required />
     </div>
     <div class="form-group">
-      <label>Publication Year</label>
+      <label>Utgivningsår</label>
       <input [(ngModel)]="book.publicationYear" name="publicationYear" placeholder="publicationYear" required />
-    </div>
-    <div class="form-group">
-      <label>In Stock</label>
-      <input type="checkbox" [(ngModel)]="book.isInStock" name="isInStock" />
     </div>
     <div class="form-group">
       <button type="submit">{{ editBook ? 'Save Changes' : 'Add Book' }}</button>
