--- a/src/app/components/BookListComponent/bookList.component.css
+++ b/src/app/components/BookListComponent/bookList.component.css
@@ -1,4 +1,4 @@
-:host ::ng-deep .table {
+/* :host ::ng-deep .table-custom {
   border-radius: 8px !important;
   background-color: rgba(31, 41, 55, 1) !important;
   box-shadow: 0px 4px 6px -4px rgba(0, 0, 0, 0.1) !important;
@@ -13,6 +13,7 @@
     max-width: 100%;
   }
 }
+
 
 :host ::ng-deep .thead {
   color: rgba(156, 163, 175, 1) !important;
@@ -34,4 +35,4 @@
   :host ::ng-deep .th-4 {
     padding: 0 20px !important;
   }
-}
+} */
