--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,17 @@
+@import "~bootstrap-icons/font/bootstrap-icons.css";
+@import "~bootstrap/dist/css/bootstrap.min.css";
+
+:root {
+  --light-green: rgba(32, 175, 109, 1); /* Define the light green color */
+  --dark-green: rgba(29, 99, 66, 1); /* Define the dark green color */
+  --background-dark: rgba(31, 41, 55, 1);
+  --background-light: rgba(55, 65, 81, 1);
+  --text-light: rgba(255, 255, 255, 1);
+  --text-dark: rgba(178, 178, 178, 1);
+  --text-muted: rgba(156, 163, 175, 1);
+  --error-red: rgba(239, 68, 68, 1);
+  --disabled-gray: rgba(107, 114, 128, 1);
+}
 
 header{
   background-color: rgba(17, 24, 39, 1);
@@ -84,23 +98,51 @@ body {
 }
 
 /* General button styles */
-.btn-primary {
-  background-color: rgba(34, 197, 94, 1);
+.btn-edit, .btn-delete, .btn-save, .btn-cancel, .btn-stock {
+  background-color: transparent;
   border: none;
-  padding: 10px 20px;
+  padding: 1px 10px;
   border-radius: 4px;
   font: 600 16px Roboto, sans-serif;
-  color: rgba(255, 255, 255, 1);
+
   cursor: pointer;
 }
+.btn-edit {
+  color: var(--light-green);
+}
+.btn-delete {
+  color: var(--error-red);
+}
+.btn-edit:hover .bi-pen, .btn-delete:hover .bi-trash {
+  display: none;
+}
+.btn-edit:hover::before,
+.btn-delete:hover::before {
+  font-family: "bootstrap-icons";
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  vertical-align: -0.125em;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 
-.btn-primary:disabled {
+.btn-edit:hover::before {
+  content: "\F4C7"; /* Unicode for bi-pen-fill */
+}
+
+.btn-delete:hover::before {
+  content: "\F5DD"; /* Unicode for bi-trash-fill */
+}
+
+.btn-edit:disabled {
   background-color: rgba(107, 114, 128, 1);
   cursor: not-allowed;
 }
 
-/* Table styles */
-.table {
+.table-custom {
   border-radius: 8px !important;
   background-color: rgba(31, 41, 55, 1) !important;
   box-shadow: 0px 4px 6px -4px rgba(0, 0, 0, 0.1) !important;
@@ -108,54 +150,49 @@ body {
   width: 100% !important;
   padding-bottom: 17px !important;
   overflow: hidden;
-  border-collapse: collapse; /* Ensure table layout */
+  border-collapse: collapse !important; /* Ensure table layout */
 }
 
-@media (max-width: 991px) {
-  .table {
-    max-width: 100%;
-  }
-}
-
-.thead {
+.table-custom .thead {
   color: rgba(156, 163, 175, 1);
   text-transform: uppercase;
   background-color: rgba(55, 65, 81, 1);
   font: 600 12px/1 Roboto, sans-serif;
 }
 
-.th {
+.table-custom .th-1, .table-custom .th-2, .table-custom .th-3 {
+  padding: 20px 24px;
+}
+.table-custom .th-1 , .table-custom .th-2 {
   text-align: left;
+}
+.table-custom .th-1 {
   white-space: nowrap;
-  padding: 20px 24px;
 }
-
-.th-2, .th-3, .th-4, .th-5, .th-6, .th-7, .th-8 {
-  text-align: left;
-  padding: 20px 24px;
+.table-custom .th-3 , .table-custom .th-4{
+  text-align: center;
 }
-
-@media (max-width: 991px) {
-  .th-2, .th-3, .th-4, .th-5, .th-6, .th-7, .th-8 {
-    white-space: initial;
-    padding: 0 20px;
-  }
+.table-custom .th-4 {
+  padding: 20px 12px;
 }
-
-.tbody {
+.table-custom .tbody {
   color: rgba(255, 255, 255, 1);
   font: 400 16px Roboto, sans-serif;
 }
 
-.tr {
+.table-custom .tr {
   border-bottom: 1px solid rgba(55, 65, 81, 1);
 }
 
-.td {
+.table-custom .td {
   text-align: left;
   padding: 1px 24px; /* Ensure padding is applied */
 }
-.td-short {
+.table-custom .td-action {
+  text-align: center;
+  padding: 1px 6x; /* Ensure padding is applied */
+}
+.table-custom .td-short {
   text-align: left;
   padding: 1px 5px; /* Ensure padding is applied */
 }
